Improve layoutPacking
Reintroduce more sophisticated layout routine for full layout --- use al available faces a vert is in to compute and average its center. Needed especially for large torus packings